[package]
name = "rustup-mirror"
version = "0.4.4"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"
description = "Setup a local rustup mirror."
repository = "https://github.com/jiegec/rustup-mirror"
readme = "README.md"
keywords = ["rustup", "mirror"]
license = "MIT"

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
failure = "0.1.8"
filebuffer = "0.4.0"
glob = "0.3.0"
indicatif = "0.16.2"
reqwest = { version = "0.11.2", features = ["blocking", "socks"] }
ring = "0.16.20"
toml = "0.5.8"
url = "2.2.1"
hex = "0.4.3"

[package.metadata.deb]
section = "utils"
