[package]
name = "rustup-mirror"
version = "0.9.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"
description = "Setup a local rustup mirror."
repository = "https://github.com/jiegec/rustup-mirror"
readme = "README.md"
keywords = ["rustup", "mirror"]
license = "MIT"

[dependencies]
chrono = "0.4.19"
clap = { version = "4.5.32", features = ["derive"] }
filebuffer = "1.0.0"
glob = "0.3.0"
indicatif = "0.17.5"
reqwest = { version = "0.12.15", features = ["blocking", "socks"] }
ring = "0.17.12"
toml = "0.8.1"
url = "2.2.2"
hex = "0.4.3"
anyhow = "1.0.58"

[package.metadata.deb]
section = "utils"
